# Breather

./: .gitignore  CONTEXT.md  LICENSE  PRD.md  README.md  package-lock.json  package.json
hook/: hook.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hook_install.rs  lib.rs  messages.rs  rules.rs  server.rs  state.rs
ui/: app.js  blob.js  index.html  style.css
