[package]
name = "vibe-break"
version = "0.1.0"
description = "Your AI coding guardian"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dirs = "6"
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
